--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -282,7 +282,11 @@ h3 {
   padding: 0.5rem;
 
   display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.card-user .key-value p {
+  font-weight: 700;
 }
 
 /************************************/
