progress role dropdown

--- a/app/View/users.html
+++ b/app/View/users.html
@@ -7,7 +7,7 @@
 {% block headerTitle %}Users{% endblock %}
 
 {% block content %}
-  <div x-data="{ users: []}" x-init="users = await (await fetch('api/users')).json()" id="users-page">
+  <div x-data="{ users: [], currentUserId: {{ user.id }}, currentUserRoleId: {{ user.roleId }}}" x-init="users = await (await fetch('api/users')).json()" id="users-page">
     <!-- Content -->
     <div id="users-content">
       <div>
@@ -33,13 +33,20 @@
               </div>
               <div class="key-value">
                 <span>Role</span>
-                <template x-if="user.roleId == 3">
-                  <div>
-                    <p>Role dropdown</p>
+                <template x-if="currentUserRoleId == 3 && user.id != currentUserId">
+                  <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <span x-text="formatRole(user.roleId)"></span>
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="#">User</a>
+                      <a class="dropdown-item" href="#">Admin</a>
+                      <a class="dropdown-item" href="#">Owner</a>
+                    </div>
                   </div>
                 </template>
 
-                <template x-if="user.roleId != 3">
+                <template x-if="currentUserRoleId != 3 || user.id == currentUserId">
                   <p x-text="formatRole(user.roleId)"></p>
                 </template>
               </div>
