styling updates event detailpage

--- a/app/View/event.html
+++ b/app/View/event.html
@@ -27,6 +27,18 @@
           {{ misc.keyValue("End time", event.endTime)}}
         </div>
         {{ misc.keyValue("Location", event.location)}}
+        {{ misc.keyValue("Completed", event.completed ? 'Yes' : 'No')}}
+        
+        <div class="button-group">
+          <button class="btn btn-primary">Mark completed</button>
+          <button class="btn btn-primary">Mark completed</button>
+        </div>
+      </div>
+
+      <div>
+        <h2>Participants</h2>
+
+        <p>test.test.test</p>
       </div>
     </div>
 
