--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -137,6 +137,12 @@ button {
   background-color: var(--primary-700);
 }
 
+.button-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
 /* TEXT */
 
 h1 {
@@ -248,6 +254,9 @@ h3 {
 
 #events-content {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
 }
 
 .list-events {
@@ -266,6 +275,14 @@ h3 {
 
 .card-event-detail {
   padding: 0.5rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.card-event-detail .key-value p {
+  font-weight: 600;
 }
 
 /************************************/
@@ -294,6 +311,9 @@ h3 {
 /************************************/
 
 @media only screen and (min-width: 768px) {
+  .button-group {
+    flex-direction: row;
+  }
 
   .toggleable-menu {
     position: unset;
