--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -38,8 +38,8 @@ body {
 }
 
 #wrapper {
-  max-height: 100vh;
   display: flex;
+  flex-direction: column;
 }
 
 #content {
@@ -83,13 +83,21 @@ header {
   color: #888;
 }
 
+#top-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 #side-menu {
+  height: 100vh;
+
   background-color: var(--primary-800);
   color: #fff;
 
   padding: 1rem;
 
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -196,7 +204,7 @@ h3 {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
@@ -311,6 +319,19 @@ h3 {
 /************************************/
 
 @media only screen and (min-width: 768px) {
+  #wrapper {
+    max-height: 100vh;
+    flex-direction: row;
+  }
+
+  #top-bar {
+    display: none;
+  }
+
+  #side-menu {
+    display: flex;
+  }
+
   .button-group {
     flex-direction: row;
   }
