--- a/app/View/event.html
+++ b/app/View/event.html
@@ -18,6 +18,7 @@
     <!-- Content -->
     <div id="events-content">
       <div class="card card-event-detail">
+        <img src="{{image}}">
         <!-- <span class="card-event-date">{{event.date|date('d/m/Y')}} {{event.startTime}}</span> -->
         {{ misc.keyValue("Name", event.name)}}
         {{ misc.keyValue("Description", event.description)}}
