--- a/app/View/event.html
+++ b/app/View/event.html
@@ -27,10 +27,12 @@
         </div>
         {{ misc.keyValue("Location", event.location)}}
         {{ misc.keyValue("Completed", event.completed ? 'Yes' : 'No')}}
+        {% if event.image_url != null %}
         <div class="key-value">
           <span>Image</span>
           <img class="card-event-image" src="{{ event.image_url|asset }}">
         </div>
+        {% endif %}
         
         <div class="button-group">
           <button class="btn btn-primary" @click="open = !open">Edit event</button>
