--- a/app/View/event.html
+++ b/app/View/event.html
@@ -8,7 +8,7 @@
 
 {% block headerTitle %}Event - {{event.name}}{% endblock %}
 {% block header %}
-  <button class="btn btn-primary event-edit-btn-header" @click="open = !open">Edit Event</button>
+  <button class="btn btn-primary desktop-only" @click="open = !open">Edit Event</button>
 {% endblock %}
 
 {% block contentAttributes %}x-data="{ open: false }"{% endblock %}
@@ -35,7 +35,7 @@
         {% endif %}
         
         <div class="button-group">
-          <button class="btn btn-primary" @click="open = !open">Edit event</button>
+          <button class="btn btn-primary mobile-only" @click="open = !open">Edit event</button>
           <button class="btn btn-primary">Mark completed</button>
           <button class="btn btn-danger">Delete</button>
         </div>
