--- a/app/View/events.html
+++ b/app/View/events.html
@@ -50,7 +50,7 @@
           {{ form.input("endTime", {label: "End time", placeholder:"End time"}) }}
         </div>
         {{ form.input("location", {label: "Location", placeholder:"Location", required: true}) }}
-        {{ form.input("file", {label: "File", type: "file"}) }}
+        {{ form.input("image", {label: "Image", type: "file"}) }}
         {{ form.submit('Create') }}
       </form>
     </div>
