--- a/app/View/event.html
+++ b/app/View/event.html
@@ -80,7 +80,7 @@
         <button class="toggleable-menu-close btn btn-primary" @click="open = !open">close</button>
       </div>
 
-      <form id="form-event" class="form-event" method="post" @submit.prevent="updateEvent({{event.id}})" accept-charset="UTF-8">
+      <form id="form-event" class="form-event" method="post" @submit.prevent="event = await updateEvent({{event.id}})" accept-charset="UTF-8">
         {{ form.input("name", {label: "Name", placeholder:"Name", required: true, value:event.name}) }}
         {{ form.textarea("description", {label: "Description", placeholder:"Type your event description here...", value:event.description}) }}
         {{ form.input("date", {label: "Date", type: "date", required: true, value:event.date|date('Y-m-d')}) }}
