--- a/app/View/event.html
+++ b/app/View/event.html
@@ -62,7 +62,7 @@
         
         <div class="button-group">
           <button class="btn btn-primary mobile-only" @click="open = !open">Edit event</button>
-          <button class="btn btn-danger">Delete</button>
+          <button class="btn btn-danger" @click="deleteEvent(event.id)">Delete</button>
         </div>
       </div>
 
