--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -263,6 +263,34 @@ h3 {
   color: var(--primary-700);
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  z-index: 50;
+}
+
+.cms-modal {
+  display: flex;
+  flex-direction: column;
+
+  row-gap: 1rem;
+
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
 /************************************/
 /* LOGIN */
 /************************************/
