--- a/app/View/event.html
+++ b/app/View/event.html
@@ -91,12 +91,12 @@
         {{ form.input("location", {label: "Location", placeholder:"Location", required: true, value:event.location}) }}
         {{ form.input("image", {label: "Image", type: "file"}) }}
         {{ form.submit('Update') }}
-        <button class="btn btn-primary">Mark completed</button>
+        <button class="btn btn-primary" @click.prevent="event = await setEventCompleted(event.id, !event.completed)">Toggle completed</button>
       </form>
     </div>
 
     <div x-show="showModal" class="overlay">
-      <div x-show="showModal" class="cms-modal modal-delete">
+      <div class="cms-modal modal-delete">
         <h3>Are you sure?</h3>
         <p>Are you sure you want to delete this event?</p>
         
