--- a/app/View/events.html
+++ b/app/View/events.html
@@ -16,8 +16,10 @@
   <div x-data="eventsData()" x-init="getEvents()" id="events-page">
     <!-- Content -->
     <div id="events-content">
-      <div>
-        <!-- Options -->
+      <div class="events-filters">
+        <button class="events-filter-btn btn btn-light">Upcoming</button>
+        <button class="events-filter-btn btn btn-light">All events</button>
+        <button class="events-filter-btn btn btn-light">Past</button>
       </div>
       <div>
         <h2>List</h2>
