--- a/app/View/event.html
+++ b/app/View/event.html
@@ -63,7 +63,7 @@
         <div class="button-group">
           <button class="btn btn-primary mobile-only" @click="open = !open">Edit event</button>
           <button class="btn btn-danger" @click="showModal">Delete</button>
-          <button class="btn btn-danger" @click="joinEvent(event.id)">Join event</button>
+          <button class="btn btn-btn-primary" @click="joinEvent(event.id)">Join event</button>
         </div>
       </div>
 
