--- a/app/View/event.html
+++ b/app/View/event.html
@@ -59,11 +59,24 @@
             <img class="card-event-image" src="{{ event.image_url|asset }}">
           </div>
         </template>
-        
+
         <div class="button-group">
           <button class="btn btn-primary mobile-only" @click="open = !open">Edit event</button>
           <button class="btn btn-danger" @click="showModal">Delete</button>
-          <button class="btn btn-btn-primary" @click="joinEvent(event.id)">Join event</button>
+          <button 
+            x-show="! isUserRegisteredInEvent(currentUser.id)"
+            class="btn btn-btn-primary" 
+            @click="joinEvent(event.id)"
+          >
+            Join event
+          </button>
+          <button 
+            x-show="isUserRegisteredInEvent(currentUser.id)"
+            class="btn btn-btn-primary" 
+            @click="leaveEvent(event.id)"
+          >
+            Leave event
+          </button>
         </div>
       </div>
 
