--- a/app/View/event.html
+++ b/app/View/event.html
@@ -83,7 +83,29 @@
       <div>
         <h2>Participants</h2>
 
-        <p>test.test.test</p>
+        <div class="list list-users">
+          <template x-for="user in event.participants">
+            <div class="card card-user">
+              <div class="key-value">
+                <span>Email</span>
+                <p x-text="user.email"></p>
+              </div>
+              <div class="key-value">
+                <span>Name</span>
+                <p x-text="formatNameOfUser(user)"></p>
+              </div>
+              <div class="key-value">
+                <span>Last online</span>
+                <p x-text="formatLastOnline(user.expiresOn)"></p>
+              </div>
+              <div class="key-value">
+                <span>Role</span>
+  
+                <p x-text="formatRole(user.roleId)"></p>
+              </div>
+            </div>
+          </template>
+        </div>
       </div>
     </div>
 
