fixed image showing

--- a/app/View/event.html
+++ b/app/View/event.html
@@ -53,10 +53,10 @@
             <p>No</p>
           </template>
         </div>
-        <template x-if="event.image_url">
+        <template x-if="event.imageUrl">
           <div class="key-value">
             <span>Image</span>
-            <img class="card-event-image" src="{{ event.image_url|asset }}">
+            <img class="card-event-image" src="{{ event.imageUrl|asset }}">
           </div>
         </template>
 
