--- a/app/View/users.html
+++ b/app/View/users.html
@@ -26,7 +26,7 @@
               </div>
               <div class="key-value">
                 <span>Name</span>
-                <p x-text="user.firstName"></p>
+                <p x-text="formatNameOfUser(user)"></p>
               </div>
               <div class="key-value">
                 <span>Last online</span>
